--- a/index.html
+++ b/index.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>无标题文档</title>
 </head>
 <style>
     /* table{
         border-collapse: collapse;
     } */
-    tr{
-        border-bottom:1px solid #ccc;    
+
+    tr {
+        border-bottom: 1px solid #ccc;
     }
-    td{
+
+    td {
         border-bottom: 1px dashed #000;
     }
+
+    body {
+        pointer-events: auto !important;
+        background-size: cover !important;
+        opacity: 0.9 !important;
+        background-position: 300px 300px !important;
+        background-image: url('./apple.png') !important;
+        content: '';
+        position: absolute;
+        z-index: 999;
+        width: 100%;
+        background-repeat: no-repeat;
+    }
 </style>
+
 <body>
 
-<table>
-   <tr>
-      <td>内容</td>
-      <td>内容</td>
-      <td>内容</td>
-   </tr>
-    <tr>
-      <td>内容</td>
-      <td>内容</td>
-      <td>内容</td>
-   </tr>
-    <tr>
-      <td>内容</td>
-      <td>内容</td>
-      <td>内容</td>
-   </tr>
-</table>
+    <table>
+        <tr>
+            <td>内容</td>
+            <td>内容</td>
+            <td>内容</td>
+        </tr>
+        <tr>
+            <td>内容</td>
+            <td>内容</td>
+            <td>内容</td>
+        </tr>
+        <tr>
+            <td>内容</td>
+            <td>内容</td>
+            <td>内容</td>
+        </tr>
+    </table>
 
 </body>
+
 </html>
