--- a/chrome-plugin/popup.html
+++ b/chrome-plugin/popup.html
@@ -11,7 +11,7 @@
         <div class="container">
             <form id="form" action="" autocomplete="off">
                 <div class="search">
-                    <img src="./images/smile.png" width="32" height="32" alt="书签搜索神器">
+                    <img id="icon" src="./images/smile.png" width="32" height="32" alt="书签搜索神器" title="">
                     <input type="text" id="keyword" placeholder="请输入关键字" autofocus />
                 </div>
             </form>
